@startuml

title __CONTROLLER's Class Diagram__\n

  namespace ub.edu.controller {
    class ub.edu.controller.Controller {
        + Controller()
        + acabarRuta()
        + acabarTrackRutaActual()
        + actualitzarRankingGrup()
        + actualitzarRankings()
        + addMembreGrup()
        + addPuntsToPersona()
        + addTrackRuta()
        + addTrackRutaActual()
        + afegirComarca()
        + afegirLocalitat()
        + afegirPuntDeControlFinalToTrackActual()
        + afegirPuntDeControlInicialToTrackActual()
        + afegirRuta()
        + afegirTransport()
        + cercaRutesPerComarca()
        + cercaRutesPerLocalitat()
        + cercaRutesPerTransport()
        + cercarRutesPerTempsDeDurada()
        + crearGrup()
        + findPersona()
        + getRankingGrup()
        + iniciarRuta()
        + iniciarTrackRutaActual()
        + isMail()
        + isPasswordSegur()
        + llistarCatalegRutesPerDurada()
        + llistarCatalegRutesPerNom()
        + loguejarPersona()
        + marxarGrup()
        + recuperarContrassenya()
        + validatePassword()
        + validateRegisterPersona()
        + validateRegistrePersona()
        + validateUsername()
        - getRutaList()
    }
  }
  

  namespace ub.edu.controller {
    class ub.edu.controller.ControllerData {
        - comarcaMap : Map<String, Comarca>
        - llistaGrup : List<Grup>
        - localitatMap : Map<String, Localitat>
        - rutaMap : Map<String, Ruta>
        - transportMap : Map<String, Transport>
        + ControllerData()
        + addGrupLlista()
        + afegirLocalitat()
        + afegirRuta()
        + afegirTransport()
        + getComarcaMap()
        + getDataService()
        + getLlistaGrups()
        + getLocalitatMap()
        + getRutaActual()
        + getRutaMap()
        + getTransportMap()
        + getXarxaPersones()
        + initData()
        + initRutaMap()
        + initXarxaPersones()
        + setRutaActual()
        - initComarcaMap()
        - initLocalitatMap()
        - initTransportMap()
        - relacionarRutesComarques()
        - relacionarRutesLocalitats()
        - relacionarRutesTransports()
    }
  }
  

  ub.edu.controller.Controller o-- ub.edu.controller.ControllerData : data
  ub.edu.controller.ControllerData o-- ub.edu.resources.service.DataService : data
  ub.edu.controller.ControllerData o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.controller.ControllerData o-- ub.edu.model.Ruta : rutaActual
  ub.edu.controller.ControllerData o-- ub.edu.model.XarxaPersones : xarxaPersones


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
